test/files/invalid/invalid_array_default.fbs
table Foo {
  x: [uint8: 3] = [0, 1, 2, 3];
}