test/files/invalid/invalid_array_default.stderr
error: Unsupported type
  ┌─ test/files/invalid/invalid_array_default.fbs:2:6
  │
2 │   x: [uint8: 3] = [0, 1, 2, 3];
  │      ^^^^^^^^^^ Arrays in tables are not supported

error: Array literal does not have the correct length
  ┌─ test/files/invalid/invalid_array_default.fbs:2:19
  │
2 │   x: [uint8: 3] = [0, 1, 2, 3];
  │                   ^^^^^^^^^^^^

